adding some new services, some of which for documents and the databases, saving sessions for now in a Xodus database, modifying the application configuration in the pom.xml