@@ -1,20 +1,20 @@
 package de.axxepta.controllers;
 
+import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
-import javax.annotation.PreDestroy;
 import javax.inject.Inject;
 import javax.inject.Named;
 import javax.ws.rs.Consumes;
 import javax.ws.rs.DELETE;
+import javax.ws.rs.DefaultValue;
+import javax.ws.rs.FormParam;
 import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.Path;
@@ -25,17 +25,19 @@ import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
 
 import org.apache.log4j.Logger;
-import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
-import org.glassfish.jersey.media.multipart.FormDataParam;
+import org.codehaus.plexus.util.FileUtils;
 
 import com.codahale.metrics.Meter;
-import com.codahale.metrics.Timer;
 
 import de.axxepta.exceptions.ResponseException;
 import de.axxepta.listeners.RegisterMetricsListener;
-import de.axxepta.models.FileModel;
-import de.axxepta.services.interfaces.IDatabaseResourceService;
+import de.axxepta.models.FileDescriptionModel;
+import de.axxepta.models.FileDisplayModel;
+import de.axxepta.services.interfaces.IFileResourceService;
 import de.axxepta.tools.ValidationString;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 
 @Path("document-services")
 public class DocumentsResourcesController {
@@ -45,102 +47,96 @@ public class DocumentsResourcesController {
 	private final Meter metricRegistry = RegisterMetricsListener.requests;
 
 	@Inject
-	@Named("DatabaseBaseXServiceImplementation")
-	private IDatabaseResourceService documentsService;
+	@Named("FileServiceImplementation")
+	private IFileResourceService fileService;
 
-	private List<File> tmpFileList = new ArrayList<>();
-
-	@PreDestroy
-	private void init() {
-		for (File tmpFile : tmpFileList) {
-			tmpFile.deleteOnExit();
-			LOG.info(tmpFileList + " put on deleted");
+	@Operation(summary = "List uploaded files", description = "Provide a map of uploaded files", method = "GET", operationId = "#6_1")
+	@ApiResponses({ @ApiResponse(responseCode = "200", description = "retrieve of json of uploaded files"),
+			@ApiResponse(responseCode = "409", description = "uploaded directory stored as constant not exist") })
+	@GET
+	@Path("list-uploaded-files")
+	@Produces(MediaType.APPLICATION_JSON)
+	public Response listUploadedFiles() throws ResponseException {
+		metricRegistry.mark();
+		List<File> filesList = fileService.listUploadedFiles();
+		if (filesList == null) {
+			throw new ResponseException(Response.Status.CONFLICT.getStatusCode(), "Upload directory not exist");
 		}
+
+		Map<String, FileDisplayModel> filesResponseMap = new HashMap<>();
+		for (File file : filesList) {
+			String key = FileUtils.basename(file.getName());
+			FileDisplayModel value = null;
+			try {
+				value = new FileDisplayModel(file);
+				filesResponseMap.put(key, value);
+			} catch (IOException e) {
+				LOG.error(e.getMessage());
+			}
+		}
+
+		return Response.status(Status.OK).entity(filesResponseMap).build();
 	}
 
-	@POST
-	@Path("local-file-to-url")
-	@Consumes(MediaType.MULTIPART_FORM_DATA)
-	@Produces(MediaType.TEXT_PLAIN)
-	public Response uploadFile(@FormDataParam("file") InputStream fileInputStream,
-			@FormDataParam("file") FormDataContentDisposition fileMetaData) throws ResponseException {
+	@Operation(summary = "Check if file exist", description = "Check if file specified by name exist", method = "GET", operationId = "#6_2")
+	@ApiResponses({ @ApiResponse(responseCode = "200", description = "file exist"),
+			@ApiResponse(responseCode = "202", description = "file not exist"),
+			@ApiResponse(responseCode = "400", description = "name of file cannot be valided") })
+	@GET
+	@Path("exist-file")
+	public Response existFile(@QueryParam("filename") String fileName) throws ResponseException {
+		LOG.info("test if file service");
 		metricRegistry.mark();
-		Timer timer = new Timer();
-		if (fileInputStream == null || fileMetaData == null) {
+		if (!ValidationString.validationString(fileName, "fileName")) {
+			LOG.error("Name of file is null or empty");
+			throw new ResponseException(Response.Status.BAD_REQUEST.getStatusCode(),
+					"Name of file cannot be validated");
+		}
+		boolean fileExists = fileService.existFileStored(fileName);
+		if (fileExists)
+			return Response.status(Status.OK).entity("File  with name " + fileName + " exist").build();
+		else
+			return Response.status(Status.ACCEPTED).entity("File  with name " + fileName + " not exist").build();
+	}
+
+	@Operation(summary = "Upload file", description = "Upload file as an temporal one", method = "POST", operationId = "#6_3")
+	@ApiResponses({
+			@ApiResponse(responseCode = "200", description = "upload file succes and return URL for temporal file and his type in JSON"),
+			@ApiResponse(responseCode = "400", description = "at least one parameter in the request is missing"),
+			@ApiResponse(responseCode = "409", description = "temporal file cannot be created") })
+	@POST
+	@Path("upload")
+	@Consumes(MediaType.APPLICATION_FORM_URLENCODED)
+	@Produces(MediaType.APPLICATION_JSON)
+	public Response uploadFileLocal(@FormParam("file-url") String fileURLString,
+			@DefaultValue("true") @FormParam("as-temp-file") boolean isTmpFile) throws ResponseException {
+		metricRegistry.mark();
+
+		if (!ValidationString.validationString(fileURLString, "file url")) {
 			LOG.error("At least one of the parameters is missing");
 			throw new ResponseException(Response.Status.BAD_REQUEST.getStatusCode(),
 					"At least one of the parameters is missing");
 		}
 
-		Timer.Context timerContext = timer.time();
-
-		String prefixFile = fileMetaData.getFileName();
-		File tempFileUpload;
-		try {
-			tempFileUpload = File.createTempFile(prefixFile, ".tmp");
-		} catch (IOException e) {
-			LOG.error("Temp file cannot be created " + e.getMessage());
-			throw new ResponseException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(),
-					"Temp file cannot be created");
-		}
-
-		try {
-			int read = 0;
-			byte[] buffer = new byte[1024];
-
-			OutputStream outStream = new FileOutputStream(tempFileUpload);
-			while ((read = fileInputStream.read(buffer)) != -1) {
-				outStream.write(buffer, 0, read);
-			}
-			outStream.flush();
-			outStream.close();
-		} catch (IOException e) {
-			LOG.error(e.getMessage());
-			throw new ResponseException(Response.Status.INTERNAL_SERVER_ERROR.getStatusCode(),
-					"Internal error in file uploading");
-		}
-
-		tmpFileList.add(tempFileUpload);
-
 		URL fileURL = null;
 		try {
-			fileURL = tempFileUpload.toURI().toURL();
+			fileURL = new URL(fileURLString);
 		} catch (MalformedURLException e) {
 			LOG.error(e.getMessage());
-			return null;
+			throw new ResponseException(Response.Status.BAD_REQUEST.getStatusCode(),
+					"String does not determine a valid URL");
 		}
+		FileDescriptionModel fileDescription = fileService.uploadLocalFile(fileURL, isTmpFile);
 
-		timerContext.stop();
-		LOG.info("URL for uploaded file is " + tempFileUpload.getPath() + " was obtained in " + timer.getMeanRate());
-		return Response.ok(fileURL.toString()).build();
+		if (fileDescription == null)
+			throw new ResponseException(Response.Status.CONFLICT.getStatusCode(), "The file could not be uploaded");
+		return Response.ok(fileDescription).build();
 	}
 
-	@POST
-	@Path("upload-file")
-	@Consumes(MediaType.APPLICATION_JSON)
-	@Produces(MediaType.TEXT_PLAIN)
-	public Response uploadFile(FileModel fileModel) throws ResponseException {
-		LOG.info("upload file service");
-		metricRegistry.mark();
-
-		if (fileModel == null)
-			LOG.error("is not transmited json for user");
-
-		String fileNamePath = fileModel.getFileNamePath();
-		String refFile = fileModel.getFileRef();
-
-		if (!ValidationString.validationString(fileNamePath, "fileNamePath")) {
-			LOG.error("Not valid file name with path");
-			throw new ResponseException(Response.Status.BAD_REQUEST.getStatusCode(), "Not valid file name with path");
-		}
-
-		if (!ValidationString.validationString(refFile, "refFile")) {
-			LOG.error("File reference is not valid");
-			throw new ResponseException(Response.Status.BAD_REQUEST.getStatusCode(), "File reference is not valid");
-		}
-		return null;
-	}
-
+	@Operation(summary = "Delete a file", description = "Delete an file from uploaded set", method = "DELETE", operationId = "#6_4")
+	@ApiResponses({ @ApiResponse(responseCode = "200", description = "the file was successfully deleted"),
+			@ApiResponse(responseCode = "202", description = "file not exist"),
+			@ApiResponse(responseCode = "409", description = "name of file cannot be validated") })
 	@DELETE
 	@Path("delete-file")
 	@Produces(MediaType.TEXT_PLAIN)
@@ -152,19 +148,17 @@ public class DocumentsResourcesController {
 			LOG.error("Not valid file name");
 			throw new ResponseException(Response.Status.BAD_REQUEST.getStatusCode(), "Not valid file name");
 		}
-
-		return Response.status(Status.OK).entity("File  " + fileName + " was deleted").build();
+		boolean hasDeleted = fileService.deleteFile(fileName);
+		if (hasDeleted)
+			return Response.status(Status.OK).entity("File  with name " + fileName + " was deleted").build();
+		else
+			return Response.status(Status.ACCEPTED).entity("File with name " + fileName + "has not been deleted")
+					.build();
 	}
 
-	@GET
-	@Path("exist-file")
-	public Response existFile(@QueryParam("filename") String fileName) {
-		LOG.info("test if file service");
-		metricRegistry.mark();
-
-		return Response.status(Status.OK).entity("File  " + fileName + " was deleted").build();
-	}
-
+	@Operation(summary = "Retrieve file", description = "Retrieve file as an binary one", method = "GET", operationId = "#6_5")
+	@ApiResponses({ @ApiResponse(responseCode = "200", description = "return file content"),
+			@ApiResponse(responseCode = "409", description = "name of file cannot be validated") })
 	@GET
 	@Path("retrieve-file")
 	@Produces(MediaType.APPLICATION_OCTET_STREAM)
@@ -177,7 +171,10 @@ public class DocumentsResourcesController {
 			throw new ResponseException(Response.Status.BAD_REQUEST.getStatusCode(), "File name is not valid");
 		}
 
-		return Response.status(Status.OK).entity("File  " + fileName + " was retireved").build();
+		byte[] bytesFile = fileService.readingFile(fileName);
+		ByteArrayOutputStream boStream = new ByteArrayOutputStream(bytesFile.length);
+		boStream.write(bytesFile, 0, bytesFile.length);
+		return Response.ok(boStream, "image/png").header("content-disposition", "attachment; filename = " + fileName)
+				.build();
 	}
-
 }
